devops/k8s-files/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"


spec:
  ingressClassName: nginx
  rules:
  - host: laniado.jenkins.io
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: jenkins
              port:
                number: 8080
